# techcheap

./: README.md  docker-compose.yml
backend/: .env  .env.docker  DockerFile  Makefile  main.py  pyproject.toml
backend/migrations/models/: 0_20221203221743_init.py  1_20221208130614_update.py
backend/source/api/handlers/comments/: all_comments.py  comment_by_id.py  create_comment.py  delete_comment.py  update_comment.py
backend/source/api/handlers/posts/: all_posts.py  create_post.py  delete_post.py  post_by_id.py  update_post.py
backend/source/api/handlers/users/: create_user.py  delete_user.py
backend/source/api/urls/: comments.py  posts.py  users.py
backend/source/core/: settings.py
backend/source/database/: config.py  core.py  models.py
backend/source/schemas/: comments.py  posts.py  users.py
backend/source/schemas/response/: token.py
backend/source/services/auth/: user.py
backend/source/services/cache/: __init__.py  base.py  keys_enum.py
backend/source/services/utils/: jwt.py
frontend/: .dockerignore  DockerFile  package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Navbar.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: comments.js  posts.js  users.js
frontend/src/views/: EditPost.vue  Home.vue  Login.vue  Post.vue  Posts.vue  Profile.vue  Register.vue
